--- a/src/Stylesheets/Vocabset.css
+++ b/src/Stylesheets/Vocabset.css
@@ -11,67 +11,93 @@
 .setRenderer input:nth-child(1) {
     grid-column: 1 / 5;
     grid-row: 1 / 2;
-    margin: 20px;
 }
 
 .setRenderer input:nth-child(2) {
     grid-column: 1 / 5;
     grid-row: 2 / 3;
-    margin: 20px;
-}
-
-.setRenderer input[type='text'] {
-    font-size: 6vh;
-    background: var(--default-Color);
-    border: none;
-    outline: none;
-    color: var(--default-BG-Bright);
 }
 
 .setRenderer button {
     grid-column: 5 / 7;
     grid-row: 1 / 3;
-    margin: 20px;
+}
+
+.setRenderer input:nth-child(1),
+.setRenderer input:nth-child(2),
+.setRenderer button {
     background: var(--default-Color);
     border: none;
     outline: none;
-    color: var(--default-BG-Bright);
-    font-size: 6vh;
+    margin: 20px;
+    font-size: 5vh;
+    color: var(--default-BG);
 }
 
-.setRenderer ul {
+.setRenderer div {
     background: var(--default-Color);
+    margin: 20px;
     grid-column: 1 / 7;
     grid-row: 3 / 7;
-    margin: 20px;
-    padding: 0;
+    overflow: auto;
+}
+
+.setRenderer div ul {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    overflow: auto;
+}
+
+.setRenderer div ul li {
+    list-style-type: decimal;
+    font-size: 5vh;
+    color: var(--default-BG);
+    margin-top: 1rem;
+}
+
+.setRenderer div ul {
     overflow-y: scroll;
     overflow-x: hidden;
 }
 
-.setRenderer ul li {
+.setRenderer ::-webkit-scrollbar {
+    width: 1em;
+}
+
+.setRenderer ::-webkit-scrollbar-track {
+    background: var(--default-Color-Darker);
+}
+
+.setRenderer ::-webkit-scrollbar-thumb {
+    background-color: var(--default-Color-Dark);
+    border: none;
+    outline: none;
+}
+
+.setRenderer div .infoH1 {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.setRenderer div .infoH1 h1 {
+    font-size: 20px;
+    color: #000;
+    margin: 0;
+}
+
+.setRenderer div .vocabPair {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
-    font-size: 2vh;
+    margin-left: 3rem;
+    margin-right: 3rem;
+
 }
 
-.setRenderer ul li h1 {
-    padding: 0px 8rem 0px 8rem;
-    color: var(--default-BG);
-}
-
-::-webkit-scrollbar {
-    width: 20px;
-}
-
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px var(--default-Color);
-    border-radius: 0px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: var(--default-Color-Darker);
-    border-radius: 50px;
+.setRenderer div .vocabPair h1 {
+    font-size: 20px;
+    color: #000;
 }
